--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <title>Felipe Secato | Currículo</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
-        <meta name="description" content="Currículo Felipe Secato">
-        <meta name="author" content="Felipe">
+        <meta name="description" content="Currículo profissional de Felipe Secato">
+        <meta name="author" content="Felipe Secato">
 
         <!-- GLOBAL MANDATORY STYLES -->
         <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
