--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             <p class="promo-block-text">Web Designer &amp; Front-end Developer</p>
                         </div>
                         <ul class="list-inline">
-                            <li><a href="#" class="social-icons"><i class="icon-social-facebook"></i></a></li>
+                            <li><a href="https://www.facebook.com/felipe.secato.9" class="social-icons"><i class="icon-social-facebook"></i></a></li>
                             <li><a href="#" class="social-icons"><i class="icon-social-twitter"></i></a></li>
                             <li><a href="#" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
                         </ul>
@@ -117,33 +117,6 @@
                             <p>Desde cedo sempre tive gosto por coisas relacionadas a tecnologia, seja video-games, smartphones, computadores, etc. Com isso após a minha graduação no Ensino Médio, decidi me apronfudar mais nesse campo e saber como tudo acontece dentro dessas máquinas, como toda a criação de softwares e jogos acontecem.</p>
                             <p>Outra área por qual tenho bastante atração são o marketing e o design, áreas no qual são fundamentais também dentro da tecnologia, para o desenvolvimento e comunicação em projetos.</p>
                         </div>
-
-                        <!-- Progress Box -->
-                        <div class="progress-box">
-                            <h5>CSS <span class="color-heading pull-right">87%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="87"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>HTML5 <span class="color-heading pull-right">96%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="96"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>JavaSript <span class="color-heading pull-right">52%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="52"></div>
-                            </div>
-                        </div>
-                        <div class="progress-box">
-                            <h5>Photoshop <span class="color-heading pull-right">77%</span></h5>
-                            <div class="progress">
-                                <div class="progress-bar bg-color-base" role="progressbar" data-width="77"></div>
-                            </div>
-                        </div>
-                        <!-- End Progress Box -->
                     </div>
                 </div>
                 <!--// end row -->
