--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 <html lang="pt-br" class="no-js">
     <!-- BEGIN HEAD -->
     <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109373055-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-109373055-1');
+    </script>
+
         <meta charset="utf-8"/>
         <title>Felipe Secato | Currículo</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
